[project]
name = "pico-banana-400k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
